--- a/academics/CSEteachers.html
+++ b/academics/CSEteachers.html
@@ -15,9 +15,9 @@
 
 
     <!-- Main style sheet -->
-    <link rel="stylesheet" type="text/css" href="css/style.css">
+    <link rel="stylesheet" type="text/css" href="../css/style.css">
     <!-- responsive style sheet -->
-    <link rel="stylesheet" type="text/css" href="css/responsive.css">
+    <link rel="stylesheet" type="text/css" href="../css/responsive.css">
 
 
     <!-- Fix Internet Explorer ______________________________________-->
@@ -33,41 +33,41 @@
 
 
 		<!-- j Query -->
-		<script type="text/javascript" src="vendor/jquery.2.2.3.min.js"></script>
+		<script type="text/javascript" src="../vendor/jquery.2.2.3.min.js"></script>
 
 		<!-- Bootstrap JS -->
-		<script type="text/javascript" src="vendor/bootstrap/bootstrap.min.js"></script>
+		<script type="text/javascript" src="../vendor/bootstrap/bootstrap.min.js"></script>
 
 		<!-- Vendor js _________ -->
 		
 		<!-- revolution -->
-		<script src="vendor/revolution/jquery.themepunch.tools.min.js"></script>
-		<script src="vendor/revolution/jquery.themepunch.revolution.min.js"></script>
-		<script type="text/javascript" src="vendor/revolution/revolution.extension.slideanims.min.js"></script>
-		<script type="text/javascript" src="vendor/revolution/revolution.extension.layeranimation.min.js"></script>
-		<script type="text/javascript" src="vendor/revolution/revolution.extension.navigation.min.js"></script>
-		<script type="text/javascript" src="vendor/revolution/revolution.extension.kenburn.min.js"></script>
-		<script type="text/javascript" src="vendor/revolution/revolution.extension.actions.min.js"></script>
-		<script type="text/javascript" src="vendor/revolution/revolution.extension.video.min.js"></script>
+		<script src="../vendor/revolution/jquery.themepunch.tools.min.js"></script>
+		<script src="../vendor/revolution/jquery.themepunch.revolution.min.js"></script>
+		<script type="text/javascript" src="../vendor/revolution/revolution.extension.slideanims.min.js"></script>
+		<script type="text/javascript" src="../vendor/revolution/revolution.extension.layeranimation.min.js"></script>
+		<script type="text/javascript" src="../vendor/revolution/revolution.extension.navigation.min.js"></script>
+		<script type="text/javascript" src="../vendor/revolution/revolution.extension.kenburn.min.js"></script>
+		<script type="text/javascript" src="../vendor/revolution/revolution.extension.actions.min.js"></script>
+		<script type="text/javascript" src="../vendor/revolution/revolution.extension.video.min.js"></script>
 
 		<!-- Google map js -->
 		<script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBZ8VrXgGZ3QSC-0XubNhuB2uKKCwqVaD0&callback=goMap" type="text/javascript"></script> <!-- Gmap Helper -->
-		<script src="vendor/gmaps.min.js"></script>
+		<script src="../vendor/gmaps.min.js"></script>
 		<!-- owl.carousel -->
-		<script type="text/javascript" src="vendor/owl-carousel/owl.carousel.min.js"></script>
+		<script type="text/javascript" src="../vendor/owl-carousel/owl.carousel.min.js"></script>
 		<!-- mixitUp -->
-		<script type="text/javascript" src="vendor/jquery.mixitup.min.js"></script>
+		<script type="text/javascript" src="../vendor/jquery.mixitup.min.js"></script>
 		<!-- Progress Bar js -->
-		<script type="text/javascript" src="vendor/skills-master/jquery.skills.js"></script>
+		<script type="text/javascript" src="../vendor/skills-master/jquery.skills.js"></script>
 		<!-- Validation -->
-		<script type="text/javascript" src="vendor/contact-form/validate.js"></script>
-		<script type="text/javascript" src="vendor/contact-form/jquery.form.js"></script>
+		<script type="text/javascript" src="../vendor/contact-form/validate.js"></script>
+		<script type="text/javascript" src="../vendor/contact-form/jquery.form.js"></script>
 
 
 		<!-- Theme js -->
-		<script type="text/javascript" src="js/theme.js"></script>
-		<script type="text/javascript" src="js/map-script.js"></script>
-        <script type="text/javascript" src="js/cse-faculty.js"></script>
+		<script type="text/javascript" src="../js/theme.js"></script>
+		<script type="text/javascript" src="../js/map-script.js"></script>
+        <script type="text/javascript" src="../js/cse-faculty.js"></script>
 
      <!--   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css">-->
 </head>
@@ -128,7 +128,7 @@
                                     <div class="float-left">
                                         <div class="single-team-member">
                                             <div class="img">
-                                                <img STYLE="height: 300px;width: 360px;" src="images/team/Sunita_Tiwari_CSE.jpg" alt="Image">
+                                                <img STYLE="height: 300px;width: 360px;" src="../images/team/Sunita_Tiwari_CSE.jpg" alt="Image">
                                                 <div class="opacity tran4s">
                                                     <h4>Sunita Tiwari</h4>
                                                     <span>T&P Head</span>
