--- a/about.html
+++ b/about.html
@@ -181,7 +181,7 @@ var editor = new Quill('.theme-title', options);
                                     <li><a href="placements.html">PLACEMENTS</a></li>
                                     <li class="dropdown-holder"><a href="academics.html">ACADEMICS</a>
 										<ul class="sub-menu">
-												<li><a href="CSEteachers.html" class="tran3s">CSE Faculty</a></li>
+												<li><a href="./academics/CSEteachers.html"  class="tran3s">CSE Faculty</a></li>
 												<li><a href="#" class="tran3s">ECE Faculty</a></li>
 												<li><a href="#" class="tran3s">MAE Faculty</a></li>
 											</ul>
