--- a/placements.html
+++ b/placements.html
@@ -150,7 +150,7 @@
                                 <li class="active"><a href="placements.html">PLACEMENTS</a></li>
 								<li class="dropdown-holder"><a href="academics.html">ACADEMICS</a>
 									<ul class="sub-menu">
-											<li><a href="CSEteachers.html" class="tran3s">CSE Faculty</a></li>
+											<li><a href="./academics/CSEteachers.html"  class="tran3s">CSE Faculty</a></li>
 											<li><a href="#" class="tran3s">ECE Faculty</a></li>
 											<li><a href="#" class="tran3s">MAE Faculty</a></li>
 										</ul>
