--- a/index.html
+++ b/index.html
@@ -341,7 +341,8 @@
 								<input type="search" placeholder="Search..." name="q">
 								<button class="p-color-bg" type="submit" name="action"><i class="fa fa-search" aria-hidden="true"></i></button>
 							</form>
-
+	<a style = "padding:10px 40%;background-color: firebrick; color: floralwhite;display: inherit;" href="https://translate.google.com/translate?hl=en&sl=en&tl=hi&u=https%3A%2F%2Fvishalgbpec.hashbase.io%2F"><i class="fa fa-search" aria-hidden="true"></i>Google Translate</a></button>
+						
 							<div class="sidebar-news-list">
 								<h6>Latest News</h6>
 								<ul>
