--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 					     <ul class="nav navbar-nav">
 					       	<li class="active"><a href="#">HOME</a></li>
 							<li><a href="about.html">ABOUT</a></li>
-							<li><a href="notice.php">NOTICES</a></li>
+							<li><a href="notice.html">NOTICES</a></li>
 					<!--		<li><a href="index.html#project-section">SOCI</a></li>-->
 							<li><a href="agenda/index.html">EVENTS</a>
 							<ul class="sub-menu">
@@ -92,7 +92,7 @@
 							<li class="dropdown-holder"><a href="#">STUDENTS CORNER</a>
 								<ul class="sub-menu">
 									<li><a href="campus.html" class="tran3s">Campus</a></li>
-									<li><a href="gallery.php" class="tran3s">Activities</a></li>
+									<li><a href="gallery.html" class="tran3s">Activities</a></li>
 									<li><a href="socities.html" class="tran3s">Socities</a></li>
 								</ul>
 							
